Подключен в проекте viewBinding для работы с элементами View. Добавлен абстрактный класс BaseFragment с базовыми методами работы с viewBinding. Реализована прямая и обратная навигация между стартовым окном и окном с детальной информацие о погоде: при нажатии на кнопку осуществляется прямой переход на окно с детальной информацией о погоде, а при нажатии или на кноку Домашняя страница, или на системную кнопку Back осуществляется возврат на домашнюю страницу. Если при нахождении на домашней странице нажать системную кнопку Back, то приложение закрывается. Если при нахождении на домашней странице нажать на кнопку Домашняя страница, то приложение остаётся на этом же окне.

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,24 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph"
-    app:startDestination="@id/homePageFragment">
+    app:startDestination="@id/home_page_fragment">
 
     <fragment
-        android:id="@+id/homePageFragment"
+        android:id="@+id/home_page_fragment"
         android:name="com.place.weather.monitor.placeweathermonitor.view.fragments.homepage.HomePageFragment"
         android:label="fragment_home_page"
         tools:layout="@layout/fragment_home_page" >
         <action
-            android:id="@+id/action_homePageFragment_to_detailWeatherFragment"
-            app:destination="@id/detailWeatherFragment" />
+            android:id="@+id/action_home_page_fragment_to_detail_weather_fragment"
+            app:destination="@id/detail_weather_fragment" />
     </fragment>
     <fragment
-        android:id="@+id/detailWeatherFragment"
+        android:id="@+id/detail_weather_fragment"
         android:name="com.place.weather.monitor.placeweathermonitor.view.fragments.detailweather.DetailWeatherFragment"
         android:label="fragment_detail_weather"
         tools:layout="@layout/fragment_detail_weather" >
         <action
-            android:id="@+id/action_detailWeatherFragment_to_homePageFragment"
-            app:destination="@id/homePageFragment" />
+            android:id="@+id/action_detail_weather_fragment_to_home_page_fragment"
+            app:destination="@id/home_page_fragment" />
     </fragment>
 </navigation>
