--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -5,4 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".view.fragments.homepage.HomePageFragment">
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_detail_weather_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment_home_page_button_text"
+        android:textAllCaps="false"
+        android:layout_gravity="center"/>
+
 </FrameLayout>
