--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,18 +23,30 @@
     <dimen name="cloud_image_margin_end">8dp</dimen>
     <dimen name="humidity_percent_background_layout_width">43dp</dimen>
     <dimen name="humidity_percent_background_layout_height">43dp</dimen>
-    <dimen name="humidity_percent_value_text_size">16sp</dimen>
-    <dimen name="humidity_percent_circle_layout_width">15dp</dimen>
-    <dimen name="humidity_percent_circle_layout_height">15dp</dimen>
+    <dimen name="humidity_percent_value_text_size">13sp</dimen>
+    <dimen name="humidity_percent_circle_layout_width">25dp</dimen>
+    <dimen name="humidity_percent_circle_layout_height">25dp</dimen>
     <dimen name="humidity_percent_circle_margin_start">8dp</dimen>
     <dimen name="humidity_percent_circle_margin_top">10dp</dimen>
-    <dimen name="humidity_percent_circle_indicator_size">30dp</dimen>
+    <dimen name="humidity_percent_circle_indicator_size">35dp</dimen>
     <dimen name="humidity_percent_circle_corner_radius">15dp</dimen>
     <dimen name="humidity_percent_circle_track_thickness">3dp</dimen>
-    <dimen name="cloud_value_text_size">20sp</dimen>
-    <dimen name="wind_value_text_size">20sp</dimen>
-    <dimen name="temperature_min_value_text_size">20sp</dimen>
-    <dimen name="temperature_max_value_text_size">20sp</dimen>
+    <dimen name="cloud_value_text_size">15sp</dimen>
+    <dimen name="wind_value_text_size">15sp</dimen>
+    <dimen name="temperature_min_value_text_size">15sp</dimen>
+    <dimen name="temperature_max_value_text_size">15sp</dimen>
+    <dimen name="progressbar_weather_data_list_layout_width">100dp</dimen>
+    <dimen name="progressbar_weather_data_list_layout_height">100dp</dimen>
+    <dimen name="view_table_line_width">2dp</dimen>
+    <dimen name="cloudy_percent_circle_indicator_size">35dp</dimen>
+    <dimen name="cloudy_percent_circle_track_corner_radius">15dp</dimen>
+    <dimen name="cloudy_percent_circle_track_thickness">3dp</dimen>
+    <dimen name="cloudy_percent_circle_margin_top">10dp</dimen>
+    <dimen name="cloudy_percent_value_text_size">13sp</dimen>
+    <dimen name="temperature_max_value_margin_start">5dp</dimen>
+    <dimen name="view_table_zero_size">0dp</dimen>
+    <dimen name="date_text_text_size">15sp</dimen>
     <integer name="data_text_ems">5</integer>
-    <integer name="humidity_percent_circle_sample_progress">93</integer>
+    <integer name="humidity_percent_circle_sample_progress">23</integer>
+    <integer name="cloudy_percent_circle_sample_progress">23</integer>
 </resources>
