--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,9 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <!-- Настройка AppBarLayout -->
+    <style name="DefaultAppBarLayout" parent="Widget.Design.AppBarLayout">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
 </resources>
