--- a/app/src/main/res/layout/fragment_detail_weather.xml
+++ b/app/src/main/res/layout/fragment_detail_weather.xml
@@ -6,24 +6,67 @@
     android:layout_height="match_parent"
     tools:context=".view.fragments.detailweather.DetailWeatherFragment">
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/annonce.main.coordinator"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="0dp"
+        tools:ignore="RtlHardcoded"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <TextView
-            android:id="@+id/weather_detailed_data_text"
-            android:layout_width="wrap_content"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/flexible.example.appbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/weather_detailed_data_text_margin"
-            android:gravity="center"
-            android:padding="@dimen/weather_detailed_data_text_padding"
-            android:textColor="@color/black"
-            android:textSize="@dimen/weather_detailed_data_text_text_size"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/weather_detailed_data_text_sample_text" />
-    </androidx.core.widget.NestedScrollView>
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/flexible.example.collapsing"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:contentScrim="?colorPrimary"
+                app:expandedTitleMarginBottom="0dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed" >
+
+                <TextView
+                    android:id="@+id/title_detail_weather_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/weather_detailed_data_text_margin"
+                    android:layout_gravity="center"
+                    android:padding="13dp"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:text="@string/weather_detailed_data_text_sample_text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="none"
+            app:behavior_overlapTop="0dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <TextView
+                android:id="@+id/weather_detailed_data_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/weather_detailed_data_text_margin"
+                android:gravity="center"
+                android:padding="@dimen/weather_detailed_data_text_padding"
+                android:textColor="@color/black"
+                android:textSize="@dimen/weather_detailed_data_text_text_size"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/weather_detailed_data_text_sample_text" />
+        </androidx.core.widget.NestedScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <ProgressBar
         android:id="@+id/progress_bar_weather_data_short_info"
